--- a/src/layout.scss
+++ b/src/layout.scss
@@ -1,10 +1,23 @@
-.layout{
-    background-color: rebeccapurple;
-    height: 100vh;
-    max-width: 1366px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+@import "./responsive.scss";
 
+.layout {
+  height: 100vh;
+  max-width: 1366px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @include lg {
+    background-color: rgb(255, 143, 143);
+    max-width: 1280px;
+  }
+  @include md {
+    background-color: rgb(255, 210, 113);
+    max-width: 768px;
+  }
+  @include sm {
+    background-color: rgb(125, 253, 193);
+    max-width: 640px;
+  }
 }
