--- a/src/layout.scss
+++ b/src/layout.scss
@@ -7,6 +7,8 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
 
   @include lg {
     background-color: rgb(255, 143, 143);
@@ -19,5 +21,8 @@
   @include sm {
     background-color: rgb(125, 253, 193);
     max-width: 640px;
+  }
+  .content {
+    flex: 1;
   }
 }
