--- a/src/components/navbar/searchBar/searchBar.scss
+++ b/src/components/navbar/searchBar/searchBar.scss
@@ -1,6 +1,5 @@
 @import "../../../responsive.scss";
 
-
 .searchBar {
   .type {
     button {
@@ -19,6 +18,11 @@
       &:first-child {
         border-top-left-radius: 5px;
         border-right: none;
+
+
+        @include sm{
+          border-bottom: 1px solid #999
+        }
       }
       &:last-child {
         border-top-right-radius: 5px;
@@ -27,7 +31,6 @@
     }
   }
 
-
   form {
     border: 1px solid #999;
     display: flex;
@@ -35,30 +38,44 @@
     height: 64px;
     gap: 5px;
 
+    @include sm {
+      flex-direction: column;
+      border: none;
+    }
 
-    input{
+    input {
       border: none;
       padding: 0px 10px;
       width: 200px;
 
-      @include lg{
+      @include lg {
         padding: 0px 5px;
 
-        &:nth-child(2),:nth-child(3){
+        &:nth-child(2),
+        :nth-child(3) {
           width: 140px;
         }
       }
+      @include md {
+        width: auto;
+        &:nth-child(2),
+        :nth-child(3) {
+          width: auto;
+        }
+      }
+      @include sm{
+        padding: 20px;
+      }
     }
-    button{
+    button {
       border: none;
       cursor: pointer;
       background-color: #fece51;
       flex: 1;
 
-
-      img{
+      img {
         width: 24px;
-        height: 24px; 
+        height: 24px;
       }
     }
   }
